fix(Spacing): fix padding top with spacing tokens (#7632)
h2. Описание

Сейчас в компоненте `Spacing` при прокидывании в проп `size` значение типа string('s', 'm', 'l' и т.д) и при добавлении children для компонента, не устанавливается паддинг сверху, есть только снизу

h2. Изменения

Поисследовав данную проблема, пришел к выводу, что css выражение с рассчетом паддингов `calc(1px * var(--vkui_internal--Spacing_gap) / 2)` при значении css переменной `--vkui_internal--Spacing_gap` в виде `${число}px` неправильно рассчитывается, то есть получается 0. Скорее всего, это из-за того, что мы умножаем значение на 1px. По крайней мере, если его убрать, то проблема пропадает.
- Убрал умножение на 1px в css
- Чтобы не сломался кейс со значениями типа number, сделал добавление px при прокидывании в css переменную
- Убрал установку `height`, так как при добавлении `padding-block` `height` не нужен
- Поправил тесты, скриншоты

h2. Release notes

h2. Исправление
- Spacing: Поправлен баг с отсутствием верхнего отступа при прокидывании в `size` значение типа `string`

--- a/packages/vkui/src/components/Spacing/Spacing.module.css
+++ b/packages/vkui/src/components/Spacing/Spacing.module.css
@@ -2,8 +2,7 @@
   --vkui_internal--Spacing_gap: 0;
 
   position: relative;
-  block-size: var(--vkui_internal--Spacing_gap);
-  padding-block: calc(1px * var(--vkui_internal--Spacing_gap) / 2);
+  padding-block: calc(var(--vkui_internal--Spacing_gap) / 2);
   box-sizing: border-box;
 }
 
